crates/toml_edit/tests/fixtures/invalid/key-two-equals.stderr
TOML parse error at line 1, column 6
  |
1 | key= = 1
  |      ^
Invalid string
Expected `"`, `'`
